{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 19,
  "lineage": "9c2dfad8-4623-2e19-d991-0571abf0c3f6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/zones/us-central1-a/instanceGroups/mage-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-12-09T20:54:29.704-08:00",
            "enable_cdn": false,
            "fingerprint": "rmwaqNRXuhE=",
            "generated_id": 5359755580851700714,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/healthChecks/mage-health-check"
            ],
            "id": "projects/kkgcplabs01-030/global/backendServices/mage-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "mage-backend",
            "port_name": "http",
            "project": "kkgcplabs01-030",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/backendServices/mage-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.hc",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance_group.ig",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T22:10:03.966-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-030/global/firewalls/allow-8080",
            "log_config": [],
            "name": "allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
            "priority": 1000,
            "project": "kkgcplabs01-030",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/firewalls/allow-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mage"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6789"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T20:53:28.717-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-030/global/firewalls/allow-mage",
            "log_config": [],
            "name": "allow-mage",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
            "priority": 1000,
            "project": "kkgcplabs01-030",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/firewalls/allow-mage",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-09T20:53:29.091-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-030/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
            "priority": 1000,
            "project": "kkgcplabs01-030",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "swarm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "2377",
                  "7946"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "7946",
                  "4789"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-09T21:40:34.229-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-030/global/firewalls/allow-swarm",
            "log_config": [],
            "name": "allow-swarm",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
            "priority": 1000,
            "project": "kkgcplabs01-030",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/firewalls/allow-swarm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/kkgcplabs01-030/global/forwardingRules/mage-forwarding-rule",
            "ip_address": "136.110.140.205",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "mage-forwarding-rule",
            "port_range": "80-80",
            "project": "kkgcplabs01-030",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/forwardingRules/mage-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/targetHttpProxies/mage-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.hc",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance_group.ig",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/zones/us-central1-a/disks/mage-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kkgcplabs01-030/zones/us-central1-a/instances/mage-vm-1",
            "instance_id": "3826318424998756878",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMFC46ntEomtSvQXw6JqZjoBBiJmXNkkoq6PjUU07BbR9/2zgLJtQDG5iJeBtVYHFXfnEW8L1QIV1kwPMoim4fzrqmbosRZxyTAAF2cNKi3D3ehEqYYTQ/hZgVquqfI6Wnh8LlDCOTJ1eF+QxQs3RrJjDhuQ0UVPFBZnFmSPkbTjeQcQnllIlXa0rZCLFVozQigLPtcOGi/p7I66fH4W3kSa7tXetPwBPROdAWlMnIh0f+A5R0OS8b7DiBwY5xygNCwZy8YcSKo5l4DTMUxbh8wVZ4ZlrAnAl1k59K5zCitj+XeLqB39oZrKbMoaiBoD3dUhdPU0YXm1CJSIJ+6hWV+S61xt1aDdzZWEaU/RUZ53hL+vDyQ8AI3bAiNaNRpUeISDITmBUFOPihsTQ2cgc91igtbmF9eZdWay5RwdBjDc [...]
            },
            "metadata_fingerprint": "8e-7JkSCp3Q=",
            "name": "mage-vm-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.28.81.1",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/regions/us-central1/subnetworks/mage-subnet",
                "subnetwork_project": "kkgcplabs01-030"
              }
            ],
            "project": "kkgcplabs01-030",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/zones/us-central1-a/instances/mage-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mage"
            ],
            "tags_fingerprint": "6bNqLayOYlM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251203",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/zones/us-central1-a/disks/mage-vm-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kkgcplabs01-030/zones/us-central1-a/instances/mage-vm-2",
            "instance_id": "8653454988134400526",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMFC46ntEomtSvQXw6JqZjoBBiJmXNkkoq6PjUU07BbR9/2zgLJtQDG5iJeBtVYHFXfnEW8L1QIV1kwPMoim4fzrqmbosRZxyTAAF2cNKi3D3ehEqYYTQ/hZgVquqfI6Wnh8LlDCOTJ1eF+QxQs3RrJjDhuQ0UVPFBZnFmSPkbTjeQcQnllIlXa0rZCLFVozQigLPtcOGi/p7I66fH4W3kSa7tXetPwBPROdAWlMnIh0f+A5R0OS8b7DiBwY5xygNCwZy8YcSKo5l4DTMUxbh8wVZ4ZlrAnAl1k59K5zCitj+XeLqB39oZrKbMoaiBoD3dUhdPU0YXm1CJSIJ+6hWV+S61xt1aDdzZWEaU/RUZ53hL+vDyQ8AI3bAiNaNRpUeISDITmBUFOPihsTQ2cgc91igtbmF9eZdWay5RwdBjDc [...]
            },
            "metadata_fingerprint": "8e-7JkSCp3Q=",
            "name": "mage-vm-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.132.79.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/regions/us-central1/subnetworks/mage-subnet",
                "subnetwork_project": "kkgcplabs01-030"
              }
            ],
            "project": "kkgcplabs01-030",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/zones/us-central1-a/instances/mage-vm-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mage"
            ],
            "tags_fingerprint": "6bNqLayOYlM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kkgcplabs01-030/global/networks/mage-vpc",
            "mtu": 0,
            "name": "mage-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4653880772360749661",
            "project": "kkgcplabs01-030",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T20:53:28.795-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/kkgcplabs01-030/regions/us-central1/subnetworks/mage-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "mage-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/networks/mage-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kkgcplabs01-030",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/regions/us-central1/subnetworks/mage-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T20:55:23.957-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/kkgcplabs01-030/global/targetHttpProxies/mage-http-proxy",
            "name": "mage-http-proxy",
            "project": "kkgcplabs01-030",
            "proxy_bind": false,
            "proxy_id": 8376458025930933204,
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/targetHttpProxies/mage-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/urlMaps/mage-url-map"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.hc",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance_group.ig",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-09T20:55:12.296-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/backendServices/mage-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "oGaLS5UtBY0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/kkgcplabs01-030/global/urlMaps/mage-url-map",
            "map_id": 5873204172170806239,
            "name": "mage-url-map",
            "path_matcher": [],
            "project": "kkgcplabs01-030",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-030/global/urlMaps/mage-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.backend",
            "google_compute_health_check.hc",
            "google_compute_instance.vm1",
            "google_compute_instance.vm2",
            "google_compute_instance_group.ig",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}